# logging-datagram-handler-demo

./: .gitignore  client_example.py  pyproject.toml  readme.md
logging_udp/: __main__.py  datagram_protocols.py  making_log_record.py
