[tool.poetry]
name = "logging-udp"
version = "0.1.0"
description = ""
authors = ["William C Grisaitis <wgrisaitis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.3"
black = "^19.10b0"
ipython = "^7.16.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
